coolcomputing.com (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 915,
  "classifier_probability": 0.84,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.87,
  "homepage_snapshot_redirected_domain": "coolcomputing.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001084409id_/http://coolcomputing.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001084409id_/http%3A//coolcomputing.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "coolcomputing.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206203158id_/http%3A//coolcomputing.com/privacy_policy.php",
  "policy_title": "CoolComputing - Privacy Policy",
  "policy_url": "coolcomputing.com/privacy_policy.php",
  "sha1": "f478845a40c5ba41dad2a6702f084f23bc18bda6",
  "simhash": 12436022436095189342,
  "simhash_updated": true,
  "site_hostname": "coolcomputing.com",
  "site_url": "http://coolcomputing.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20041206203158",
  "word_count": 146,
  "year": 2004
}

--- a/c/co/coo/coolcomputing.com.html
+++ b/c/co/coo/coolcomputing.com.html
@@ -1,13 +1,13 @@
-<!--The following is the downloaded HTML source of the coolcomputing.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602224825id_/http%3A//coolcomputing.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the coolcomputing.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206203158id_/http%3A//coolcomputing.com/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<title>CoolComputing</title>
+<title>CoolComputing - Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=">
 <meta name="AUTHOR" content="CoolComputing">
 <meta name="COPYRIGHT" content="Copyright (c) 2001 by David C. Yee">
 <meta name="KEYWORDS" content="News, Technology, high-tech, hi-tech, cpu, cpu prices, processor, hardware, motherboard, downloads, 3D cards, video cards, chipsets, Windows 2000, downloads, Windows XP, Windows NT, Windows 2000 ACPI, Hibernation, Linux, Windows tips, Linux tips, computer tips, Red Hat Linux, Linksys Router, CPU price chart, tech support, hibernate, ACPI, multiple monitors, multi-monitors, Viewsonic VP150 LCD, Review of USB Zip drive, USB Zip drive, Overclock 3D accelerator video cards, Windows 98 ACPI hibernation, Windows 98 Multimonitor, Linksys Instant Gigadrive, AMD Athlon, Duron, Intel Pentium 3, Pentium III, P3, P4, Pentium 4, Athlon MP, Athlon xP, Opteron, Windows XP Tips, Linux Tips, Athlon 64, help forum">
-<meta name="DESCRIPTION" content="The source for cool and exciting high-tech news. ">
+<meta name="DESCRIPTION" content="Privacy Policy - CoolComputing - The source for cool and exciting computer technology news.">
 <style type="text/css">
 <!--
 a:hover { color: red }
@@ -79,7 +79,7 @@ function init() {
 <td bgcolor="#000000" colspan="4"><img src="themes/cc/pixel.gif" width="1" height="1" alt="" border="0" hspace="0"></td>
         </tr>
         <tr valign="center" bgcolor="#dedebb">
-<td bgcolor="#FFCC00" width="15%" nowrap=""><font size="2" color="#363636"><b>&nbsp;&nbsp;<b><font color="#363636"><a href="user.php">Create</a></font> an account</b>
+<td bgcolor="#FFCC00" width="15%" nowrap=""><font size="2" color="#363636"><b>
 </b></font></td>
 <td bgcolor="#FFCC00" align="middle" height="20" width="70%"><font size="2"><b>
 <a href="categories.php?op=newindex&amp;catid=3">CC Tips</a>
@@ -89,8 +89,6 @@ function init() {
 <a href="sections.php?op=listarticles&amp;secid=4">CPU Price Chart</a>
 &nbsp;·&nbsp;
 <a href="forum.php">Forums</a>
-&nbsp;·&nbsp;
-<a href="user.php">Your Account</a>
 </b></font>
 </td>
 <td bgcolor="#FFCC00" align="right" width="15%"><font size="2"><b>
@@ -133,7 +131,9 @@ function init() {
 
 	<tbody><tr valign="top"><td bgcolor="ffffff">
 
-	<font size="2"><li><a href="topics.php">News Archive</a>
+	<font size="2"><li><a href="index.php">Home</a>
+<br>
+</li><li><a href="topics.php">News Archive</a>
 <br>
 </li><li><a href="sections.php">Articles</a>
 <br>
@@ -155,13 +155,109 @@ function init() {
 <br>
 </li><li><a href="submit.php">Submit News</a>
 <br>
-</li><li><a href="memberslist.php">Members List</a>
-<br>
-</li><li><a href="stats.php">Stats</a>
-<br>
-</li></font><li><font size="2"><a href="privacy_policy.php">Privacy Policy</a><p></p></font><div align="center"><font size="2"></font>
+</li></font><li><font size="2"><a href="privacy_policy.php">Privacy Policy</a></font>
 
-	</div></li></td></tr></tbody></table>
+	</li></td></tr></tbody></table>
+
+	<br>
+
+
+
+	<table border="0" cellpadding="1" cellspacing="0" bgcolor="000000" width="150"><tbody><tr><td>
+
+	<table border="0" cellpadding="3" cellspacing="0" bgcolor="efefef" width="100%"><tbody><tr><td align="left">
+
+	<font size="2" color="#363636"><b>Tech Coupon/Deals</b></font>
+
+	</td></tr></tbody></table></td></tr></tbody></table>
+
+	<table border="0" cellpadding="0" cellspacing="0" bgcolor="ffffff" width="150">
+
+	<tbody><tr valign="top"><td bgcolor="ffffff">
+
+	<font size="2"><li><a title="123 inkjet cartridge Coupons and Deals (123inkjets.com)" href="123inkjets_coupons_deals_promotions.php">123inkjets.com</a>
+<br>
+</li><li><a title="4inkjet cartridge Coupons and Deals (4inkjets.com)" href="4inkjets_coupons_deals_promotions.php">4inkjets.com</a>
+<br>
+</li><li><a title="Amazon Coupons and Deals (Amazon.com)" href="amazon_coupons_deals_promotions.php">Amazon.com</a>
+<br>
+</li><li><a title="Batteries.com Battery Coupons and Deals" href="batteries_com_coupons_deals_promotions.php">Batteries.com</a>
+<br>
+</li><li><a title="Best Buy Coupons and Deals (BestBuy.com)" href="best_buy_coupons_deals_promotions.php">Best Buy</a>
+<br>
+</li><li><a title="buy.com coupons and deals" href="buy_com_coupons_deals_promotions.php">Buy.com</a>
+<br>
+</li><li><a title="cameraworld.com (ritz) coupons and deals" href="camera_world_ritz_coupons_deals_promotions.php">Camera World</a>
+<br>
+</li><li><a title="circuitcity.com coupons and deals" href="circuit_city_coupons_deals_promotions.php">Circuit City</a>
+<br>
+</li><li><a title="4sure.com coupons and deals" href="computers4sure_coupons_deals_promotions.php">Computers4Sure</a>
+<br>
+</li><li><a title="Dell Business Coupons and Deals" href="dell_business_coupons_deals_promotions.php">Dell Business</a>
+<br>
+</li><li><a title="Dell Home Coupons and Deals" href="dell_home_coupons_deals_promotions.php">Dell Home</a>
+<br>
+</li><li><a title="Dell Outlet Coupons and Deals" href="dell_outlet_coupons_deals_promotions.php">Dell Outlet</a>
+<br>
+</li><li><a title="discoverystore.com Coupons &amp; Deals for the Discover Channel Store" href="discovery_store_coupons_deals_promotions.php">Discovery Store</a>
+<br>
+</li><li><a title="ebatt.com Coupons and Deals" href="ebatt_coupons_deals_promotions.php">ebatt.com</a>
+<br>
+</li><li><a title="egadgets.com Coupons and Deals" href="egadgets_coupons_deals_promotions.php">eGadgets.com</a>
+<br>
+</li><li><a title="Gateway Coupons and Deals (gateway.com)" href="gateway_coupons_deals_promotions.php">Gateway</a>
+<br>
+</li><li><a title="GoToMyPC Coupons and Deals (gotomypc.com)" href="gotomypc_coupons_deals_promotions.php">GoToMyPC</a>
+<br>
+</li><li><a title="HP Shopping Coupons and Deals (hpshopping.com)" href="hp_shopping_coupons_deals_promotions.php">HP Shopping</a>
+<br>
+</li><li><a title="J&amp;R Computer/Music World coupons and deals" href="j_and_r_coupons_deals_promotions.php">Jandr.com</a>
+<br>
+</li><li><a title="Officedepot Coupons and Deals" href="officedepot_coupons_deals_promotions.php">Office Depot</a>
+<br>
+</li><li><a title="Officemax Coupons and Deals" href="officemax_coupons_deals_promotions.php">OfficeMax</a>
+<br>
+</li><li><a title="Overstock Coupons and Deals" href="overstock_coupons_deals_promotions.php">Overstock.com</a>
+<br>
+</li><li><a title="Photoalley.com Coupons and 
+<br />
+Deals" href="photoalley_coupons_deals_promotions.php">PhotoAlley.com</a>
+<br>
+</li><li><a title="radioshack.com Coupons and Deals" href="radioshack_coupons_deals_promotions.php">Radio Shack</a>
+<br>
+</li><li><a title="SmartBargains.com Coupons and Deals" href="smartbargains_coupons_deals_promotions.php">SmartBargains</a>
+<br>
+</li><li><a title="TigerDirect Coupons and Deals" href="tiger_direct_coupons_deals_promotions.php">TigerDirect</a>
+<br>
+</li><li><a title="SharperImage.com Coupons and Deals" href="sharperimage_coupons_deals_promotions.php">Sharper Image</a>
+<br>
+</li><li><a title="Walmart.com Coupons and Deals" href="walmart_coupons_deals_promotions.php">Walmart.com</a>
+<br>
+</li></font><li><font size="2"><a title="wolfcamera.com Coupons and Deals" href="wolfcamera_coupons_deals_promotions.php">Wolf Camera</a>
+<br>
+</font>
+
+	</li></td></tr></tbody></table>
+
+	<br>
+
+
+
+	<table border="0" cellpadding="1" cellspacing="0" bgcolor="000000" width="150"><tbody><tr><td>
+
+	<table border="0" cellpadding="3" cellspacing="0" bgcolor="efefef" width="100%"><tbody><tr><td align="left">
+
+	<font size="2" color="#363636"><b>CC Tools / Utilities</b></font>
+
+	</td></tr></tbody></table></td></tr></tbody></table>
+
+	<table border="0" cellpadding="0" cellspacing="0" bgcolor="ffffff" width="150">
+
+	<tbody><tr valign="top"><td bgcolor="ffffff">
+
+	<font size="2"><li><a href="whois.php" title="Whois Tool">Whois Tool</a></li><li><a href="email_obfuscator.php" title="Email Obfuscator">Email Obfuscator</a></li></font>
+
+	</td></tr></tbody></table>
 
 	<br>
 
@@ -179,194 +275,30 @@ function init() {
 
 	<tbody><tr valign="top"><td bgcolor="ffffff">
 
-	<font size="2"><center>There are currently, 12 guest(s) and 0 member(s) that are online.<br><br>You are Anonymous user. You can register for free by clicking <a href="user.php">here</a>.</center></font>
+	<font size="2"><center>There are currently, 14 guest(s) and 0 member(s) that are online.<br><br>You are Anonymous user. You can register for free by clicking <a href="user.php">here</a>.</center></font>
 
 	</td></tr></tbody></table>
-
-	<br>
-
-
-
-	<table border="0" cellpadding="1" cellspacing="0" bgcolor="000000" width="150"><tbody><tr><td>
-
-	<table border="0" cellpadding="3" cellspacing="0" bgcolor="efefef" width="100%"><tbody><tr><td align="left">
-
-	<font size="2" color="#363636"><b>Advertisement</b></font>
-
-	</td></tr></tbody></table></td></tr></tbody></table>
-
-	<table border="0" cellpadding="0" cellspacing="0" bgcolor="ffffff" width="150">
-
-	<tbody><tr valign="top"><td bgcolor="ffffff">
-
-	<font size="2"><br><center>
-<script type="text/javascript"><!--
-google_ad_client = "pub-3597511669739117";
-google_ad_width = 120;
-google_ad_height = 600;
-google_ad_format = "120x600_as";
-google_ad_channel ="6896815551";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-</center>
-</font>
-
-	</td></tr></tbody></table>
-
-	<br>
-
-
-
-	<table border="0" cellpadding="1" cellspacing="0" bgcolor="000000" width="150"><tbody><tr><td>
-
-	<table border="0" cellpadding="3" cellspacing="0" bgcolor="efefef" width="100%"><tbody><tr><td align="left">
-
-	<font size="2" color="#363636"><b>Cool Deals</b></font>
-
-	</td></tr></tbody></table></td></tr></tbody></table>
-
-	<table border="0" cellpadding="0" cellspacing="0" bgcolor="ffffff" width="150">
-
-	<tbody><tr valign="top"><td bgcolor="ffffff">
-
-	<font size="2"><li><a href="http://click.linksynergy.com/fs-bin/click?id=2MUw5SkKqQk&amp;offerid=29744.10000369&amp;type=3&amp;subid=0">DELL Notebook Specials. Limited Time Offer!</a><img border="0" width="1" height="1" src="http://ad.linksynergy.com/fs-bin/show?id=2MUw5SkKqQk&amp;bids=29744.10000369&amp;type=3&amp;subid=0">
-<br>
-
-<br>
-</li></font><li><font size="2"><img src="http://service.bfast.com/bfast/serve?bfmid=37628499&amp;siteid=39506862&amp;bfpage=odo1" border="0" width="1" height="1" nosave="">
-<br>
-<a href="http://service.bfast.com/bfast/click?bfmid=37628499&amp;siteid=39506862&amp;bfpage=odo1" target="_top">25% off ALL Power Peripherals at Dell Small Biz</a>
-<br>
-</font>
-
-	</li></td></tr></tbody></table>
-
-	<br>
-
-
-
-	<table border="0" cellpadding="1" cellspacing="0" bgcolor="000000" width="150"><tbody><tr><td>
-
-	<table border="0" cellpadding="3" cellspacing="0" bgcolor="efefef" width="100%"><tbody><tr><td align="left">
-
-	<font size="2" color="#363636"><b>Web Hosting</b></font>
-
-	</td></tr></tbody></table></td></tr></tbody></table>
-
-	<table border="0" cellpadding="0" cellspacing="0" bgcolor="ffffff" width="150">
-
-	<tbody><tr valign="top"><td bgcolor="ffffff">
-
-	<font size="2"><br>
-<br>
-<a href="http://promote.pair.com/click.pl"><img src="http://promote.pair.com/120x60.pl" height="60" width="120"></a></font>
-
-	</td></tr></tbody></table>
-
-	<br>
-
-
-
-	<table border="0" cellpadding="1" cellspacing="0" bgcolor="000000" width="150"><tbody><tr><td>
-
-	<table border="0" cellpadding="3" cellspacing="0" bgcolor="efefef" width="100%"><tbody><tr><td align="left">
-
-	<font size="2" color="#363636"><b>Affiliates</b></font>
-
-	</td></tr></tbody></table></td></tr></tbody></table>
-
-	<table border="0" cellpadding="0" cellspacing="0" bgcolor="ffffff" width="150">
-
-	<tbody><tr valign="top"><td bgcolor="ffffff">
-
-	<font size="2"><li><a href="http://cheap-price.net/">Cheap Price</a>
-<br>
-</li><li><a href="http://hardware-one.com/">Hardware-One</a>
-<br>
-</li><li><a href="http://www.ibelite.com/">Intense Beta</a>
-<br>
-</li><li><a href="http://www.neowin.net/">Neowin.net</a>
-<br>
-</li><li><a href="http://onepc.net/">OnePC.net</a>
-<br>
-</li><li><a href="http://www.pchardware.co.uk/">PC Hardware UK</a>
-<br>
-</li><li><a href="http://www.windowplanet.net/">Window Planet</a>
-<br>
-</li><li><a href="http://www.wininsider.com/">WinInsider</a>
-<br>
-</li></font><li><font size="2"><a href="more_affiliates.php">More affiliates</a>
-<br>
-</font><p><font size="2"></font>
-
-	</p></li></td></tr></tbody></table>
-
-	<br>
-
-
-
-	<table border="0" cellpadding="1" cellspacing="0" bgcolor="000000" width="150"><tbody><tr><td>
-
-	<table border="0" cellpadding="3" cellspacing="0" bgcolor="efefef" width="100%"><tbody><tr><td align="left">
-
-	<font size="2" color="#363636"><b>Advertisement</b></font>
-
-	</td></tr></tbody></table></td></tr></tbody></table>
-
-	<table border="0" cellpadding="0" cellspacing="0" bgcolor="ffffff" width="150">
-
-	<tbody><tr valign="top"><td bgcolor="ffffff">
-
-	<font size="2"></font><li><font size="2"><a href="http://www.amsresponse.com/">Direct Mail</a>
-<br>
-<br>
-<br>
-<a href="http://click.linksynergy.com/fs-bin/click?id=2MUw5SkKqQk&amp;offerid=56785.10000892&amp;type=4&amp;subid=0"><img width="125" height="125" alt="5 off 50 software stores - exp 4/30" border="0" src="http://ak.buy.com/buy_assets/affiliate/01/125x125_5off50soft_012004.gif"></a><img border="0" width="1" height="1" src="http://ad.linksynergy.com/fs-bin/show?id=2MUw5SkKqQk&amp;bids=56785.10000892&amp;type=4&amp;subid=0">
-<br>
-
-<br>
-<script src="http://ad.linksynergy.com/fs-bin/show?id=2MUw5SkKqQk&amp;bids=57189.507&amp;catid=1&amp;gridnum=4&amp;type=14&amp;subid=0"></script><noscript><a href="http://click.linksynergy.com/fs-bin/click?id=2MUw5SkKqQk&offerid=57189&type=4&subid="><img src="http://ad.linksynergy.com/fs-bin/show?id=2MUw5SkKqQk&bids=57189&subid=&type=4&gridnum=4"></a></noscript>       
-<br>
-
-<br>
-<a href="http://click.linksynergy.com/fs-bin/click?id=2MUw5SkKqQk&amp;offerid=14941.10000283&amp;type=4&amp;subid=0"><img width="125" height="125" alt="FREE Shipping on Father's Day Gift Guide: expires 6/10/04" border="0" src="http://www.sharperimagespecials.com/banners/Promos/Dad_125x125.gif"></a><img border="0" width="1" height="1" src="http://ad.linksynergy.com/fs-bin/show?id=2MUw5SkKqQk&amp;bids=14941.10000283&amp;type=4&amp;subid=0">
-<br>
-
-<br>
-<iframe name="apciframe" id="apciframe" style="width:193;height:663;" marginwidth="0" marginheight="0" src="http://affiliates.allposters.com/PosterStore/219243_PosterStore.htm" scrolling="no" frameborder="0"><A class="APCAnchor" HREF="http://affiliates.allposters.com/link/redirect.asp?AID=464428&PSTID=4<ID=16&TID1=1">Buy Posters at AllPosters.com </A></iframe>
-<br>
-
-<br>
-
-<br>
-<iframe marginwidth="0" marginheight="0" width="160" height="600" scrolling="no" frameborder="0" src="http://rcm.amazon.com/e/cm?t=coolcomputing-20&amp;p=14&amp;o=1&amp;l=bn1&amp;browse=493964&amp;mode=electronics&amp;f=ifr">
-<br />
-<MAP NAME="boxmap-p14"><AREA SHAPE="RECT" COORDS="37, 588, 126, 600" HREF="http://rcm.amazon.com/e/cm/privacy-policy.html?o=1" ><AREA COORDS="0,0,10000,10000" HREF="http://www.amazon.com/exec/obidos/redirect-home/coolcomputing-20" ></MAP><img src="http://rcm-images.amazon.com/images/G/01/rcm/160x600.gif" width="160" height="600" border="0" usemap="#boxmap-p14" alt="Shop at Amazon.com">
-<br />
-</iframe>
-<br>
-
-<br>
-
-<br>
-</font>
-
-	</li></td></tr></tbody></table>
 
 	<br>
 
 
 </td><td><img src="themes/cc/pixel.gif" width="15" height="1" border="0"></td><td width="100%">
-<center>
-<iframe width="468" height="60" scrolling="no" frameborder="0" src="http://rcm.amazon.com/e/cm?t=coolcomputing-20&amp;p=26&amp;o=1&amp;l=dl1&amp;f=ifr">
-
-
-
-<map name="boxmap-b1"><area shape="rect" coords="350, 45, 468, 60" href="http://rcm.amazon.com/e/cm/privacy-policy.html?o=1" ><area coords="0,0,10000,10000" href="http://www.amazon.com/exec/obidos/redirect?tag=coolcomputing-20&creative=92489&camp=8117&link_code=dl1&path=subst/misc/amazon-cobrand-cc/v3/marketing-from-associates-step1.html/ref%3Db1_assoc_26" ></map><img src="http://rcm-images.amazon.com/images/G/01/associates/promotions/b1c-468x60.gif" width="468" height="60" border="0" usemap="#boxmap-b1" alt="Amazon.com Platinum Visa Card">
-
-
-</iframe>
+<center><script type="text/javascript"><!--
+google_ad_client = "pub-3597511669739117";
+google_alternate_ad_url = "http://www.coolcomputing.com/google_no_ad.php";
+google_ad_width = 468;
+google_ad_height = 60;
+google_ad_format = "468x60_as";
+google_ad_channel ="6896815551";
+google_ad_type = "text_image";
+google_color_border = "336699";
+google_color_bg = "FFFFFF";
+google_color_link = "0000FF";
+google_color_url = "008000";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 <p></p></center><font size="3">
 	<center><table width="100%" border="0" cellspacing="1" cellpadding="0" bgcolor="#efefef"><tbody><tr><td>
 <table width="100%" border="0" cellspacing="1" cellpadding="8" bgcolor="#ffffff"><tbody><tr><td>
@@ -392,8 +324,25 @@ We do track information about the visits to our web sites. For example, statisti
 
 </tr><tr align="middle">
 <td width="100%" colspan="3">
+<script type="text/javascript"><!--
+google_ad_client = "pub-3597511669739117";
+google_alternate_ad_url = "http://www.coolcomputing.com/google_no_ad.php";
+google_ad_width = 468;
+google_ad_height = 60;
+google_ad_format = "468x60_as";
+google_ad_channel ="6896815551";
+google_ad_type = "text_image";
+google_color_border = "336699";
+google_color_bg = "FFFFFF";
+google_color_link = "0000FF";
+google_color_url = "008000";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+<p>
 
-    <center><font size="1">
+    </p><center><font size="1">
 
     Site powered by <a href="http://www.phpnuke.org">PHP-Nuke</a>.  All product names are trademarks of their respective companies. © David Yee 1998-2004
 <br><br>
