braingle.com (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;entertainment;games",
  "char_count": 4515,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.78,
  "homepage_snapshot_redirected_domain": "braingle.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001033512id_/http://www.braingle.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001033512id_/http%3A//braingle.com",
  "interval": "2004_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "braingle.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206204036id_/http%3A//www.braingle.com/privacy.php",
  "policy_title": "Braingle: Privacy Policy",
  "policy_url": "braingle.com/privacy.php",
  "sha1": "b9c7d08715b4d139facc3754c6f4d17c2d096438",
  "simhash": 5361674249625758236,
  "simhash_updated": true,
  "site_hostname": "braingle.com",
  "site_url": "http://braingle.com",
  "smog": 11.92,
  "strict_updated": true,
  "timestamp": "20041206204036",
  "word_count": 704,
  "year": 2004
}

--- a/b/br/bra/braingle.com.html
+++ b/b/br/bra/braingle.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the braingle.com privacy policy that was archived on 2004-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040630013726id_/http%3A//braingle.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the braingle.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206204036id_/http%3A//www.braingle.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><title>Braingle:  Privacy Policy</title>
 <meta http-equiv="PICS-Label" content="(PICS-1.1 &quot;http://www.icra.org/ratingsv02.html&quot; l gen true for &quot;http://www.braingle.com&quot; r (cz 1 lz 1 nz 1 oz 1 vz 1) &quot;http://www.rsac.org/ratingsv01.html&quot; l gen true for &quot;http://www.braingle.com&quot; r (n 0 s 0 v 0 l 0) &quot;http://www.classify.org/safesurf/&quot; l gen true for &quot;http://www.braingle.com/&quot; r (SS~~000 1))">
@@ -56,7 +56,7 @@
 	
 </div>
 <div id="content">
-<img src="/images/spacer.gif" width="240" height="60" border="0" alt=""><br>
+<img src="/images/spacer.gif" width="240" height="90" border="0" alt=""><br>
 
 	<h2>Privacy Policy</h2>
 <br>
@@ -115,12 +115,12 @@
 
 <table width="100%" cellpadding="0" cellspacing="0" class="gr_table">
 <tbody><tr><td class="gr_fade_top"><span class="normal">Users in <a href="http://www.braingle.com/chat/"><span class="normal">Chat</span> <img src="/images/icons/chat.gif" width="13" height="11" alt="chat" align="bottom" title="join the chat"></a>
-	None</span></td></tr>
+	<a href="/community/view.php?user=Boocho">Boocho</a></span></td></tr>
 <tr><td class="gr_lite" valign="top"><span class="normal">
 	Online: 
-	<a href="/community/view.php?user=orangemonkey">orangemonkey</a>, <a href="/community/view.php?user=cinnamon17">cinnamon17</a>, <a href="/community/view.php?user=smile">smile</a>, <a href="/community/view.php?user=jaycr">jaycr</a>, <a href="/community/view.php?user=fishmed">fishmed</a>, <a href="/community/view.php?user=Niccet">Niccet</a>, <a href="/community/view.php?user=Attila_The_Hun">Attila_The_Hun</a>, <a href="/community/view.php?user=Mogmatt16">Mogmatt16</a>, <a href="/community/view.php?user=blacktrack">blacktrack</a>, <a href="/community/view.php?user=paradiso">paradiso</a>, <a href="/community/view.php?user=mlc1209">mlc1209</a>, <a href="/community/view.php?user=niknak32">niknak32</a>, <a href="/community/view.php?user=witness">witness</a>, 78 Guests<img src="/images/spacer.gif" width="15" height="11" align="bottom" alt=""></span></td></tr><tr><td class="gr_fade_bot"><span class="mini">
+	<a href="/community/view.php?user=Injekted">Injekted</a>, <a href="/community/view.php?user=kingpocky">kingpocky</a>, <a href="/community/view.php?user=jep495">jep495</a>, <a href="/community/view.php?user=Araldite">Araldite</a>, <a href="/community/view.php?user=judybee">judybee</a>, <a href="/community/view.php?user=stacynelson03">stacynelson03</a>, <a href="/community/view.php?user=castanz">castanz</a>, <a href="/community/view.php?user=jwalters695">jwalters695</a>, <a href="/community/view.php?user=bluetwo">bluetwo</a>, <a href="/community/view.php?user=tsimkin">tsimkin</a>, <a href="/community/view.php?user=GScarlettW">GScarlettW</a>, <a href="/community/view.php?user=Maneym0">Maneym0</a>, <a href="/community/view.php?user=Jake">Jake</a>, <a href="/community/view.php?user=tissue">tissue</a>, <a href="/community/view.php?user=bnkr21">bnkr21</a>, <a href="/community/view.php?user=kjdmsi">kjdmsi</a>, <a href="/community/view.php?user=wxman">wxman</a>, <a href="/community/view.php?user=Zealot17">Zealot17</a>, <a href="/community/view.php?user=whateva_guy">whateva_guy</a>, <a href="/community/view.php?user=Mad-Ade">Mad-Ade</a>, <a href="/community/view.php?user=cbneuro">cbneuro</a>, <a href="/community/view.php?user=Gowan">Gowan</a>, <a href="/community/view.php?user=dwfree1">dwfree1</a>, <a href="/community/view.php?user=bps2h">bps2h</a>, <a href="/community/view.php?user=Boocho">Boocho</a>, <a href="/community/view.php?user=smgreyuk">smgreyuk</a>, <a href="/community/view.php?user=triagepro">triagepro</a>, <a href="/community/view.php?user=chasmac">chasmac</a>, <a href="/community/view.php?user=bjharpham">bjharpham</a>, <a href="/community/view.php?user=cupcake6792">cupcake6792</a>, <a href="/community/view.php?user=happygrl24">happygrl24</a>, <a href="/community/view.php?user=vjrogan">vjrogan</a>, <a href="/community/view.php?user=rheeyah12">rheeyah12</a>, <a href="/community/view.php?user=TaubisaTool">TaubisaTool</a>,  and 175 Guests<img src="/images/spacer.gif" width="15" height="11" align="bottom" alt=""></span></td></tr><tr><td class="gr_fade_bot"><span class="mini">
 Copyright © 1999-2004&nbsp;|&nbsp;
-Version <a href="/version.php">3.01</a>&nbsp;|&nbsp;
+Version <a href="/version.php">3.08</a>&nbsp;|&nbsp;
 <a href="/faq/index.php">FAQ</a>&nbsp;|&nbsp;
 <a href="/rss.php">RSS</a>&nbsp;|&nbsp;
 <a href="/awards.php">Awards</a>&nbsp;|&nbsp;
@@ -137,15 +137,16 @@ Version <a href="/version.php">3.01</a>&nbsp;|&nbsp;
 </div>
 
 <div id="ad"><table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td valign="top">
-	<script language="JavaScript" type="text/javascript">
-	document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad6354b.cgi/v=2.0S/sz=468x60A/184418/NI/RETURN-CODE/JS/"></scr'+'ipt>');
-	</script><script src="http://www.burstnet.com/cgi-bin/ads/ad6354b.cgi/v=2.0S/sz=468x60A/184418/NI/RETURN-CODE/JS/"></script>
-	<noscript><a href="http://www.burstnet.com/ads/ad6354b-map.cgi/ns/v=2.0S/sz=468x60A/" target="_top">
-	<img src="http://www.burstnet.com/cgi-bin/ads/ad6354b.cgi/ns/v=2.0S/sz=468x60A/" border="0" alt="Click Here"></a>
-	</noscript>
 
+<script language="JavaScript" type="text/javascript">
+document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad6354b.cgi/v=2.0S/sz=728x90A/562728/NI/RETURN-CODE/JS/"></scr'+'ipt>');
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad6354b.cgi/v=2.0S/sz=728x90A/562728/NI/RETURN-CODE/JS/"></script>
+<noscript><a href="http://www.burstnet.com/ads/ad6354b-map.cgi/ns/v=2.0S/sz=728x90A/" target="_top">
+<img src="http://www.burstnet.com/cgi-bin/ads/ad6354b.cgi/ns/v=2.0S/sz=728x90A/" border="0" alt="Click Here"></a>
+</noscript>
 
-</td><td valign="middle" width="190"></td></tr></tbody></table></div>
+</td><td valign="middle" align="center" width="70"></td></tr></tbody></table></div>
+
 
 
 </body></html>
