--- a/g/ge/gen/generac.com.html
+++ b/g/ge/gen/generac.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the generac.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606151333id_/http%3A//generac.com/privacy_statement.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the generac.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206204509id_/http%3A//www.generac.com/privacy_statement.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US"><head>
 	<title>Generac Power Systems - Privacy Statement</title>
