--- a/j/ju/jun/juneauempire.com.html
+++ b/j/ju/jun/juneauempire.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the juneauempire.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606052655id_/http%3A//juneauempire.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the juneauempire.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206205513id_/http%3A//juneauempire.com/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>JuneauEmpire.com: Privacy Policy</title>
@@ -248,55 +248,7 @@
 
 
 
-		<tr>
-			<td><img src="http://juneauempire.com/images/menu/lft_block.gif" width="5" height="14" alt=""><br></td>
-			<td><img src="http://juneauempire.com/images/menu/specialsectionhead.gif" width="156" height="14" border="0" alt="Special Sections"><br></td>
-			<td><img src="http://juneauempire.com/images/menu/rht_block.gif" width="5" height="14" alt=""><br></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td bgcolor="#E2E6EF" valign="TOP">
 
-
-
-				<table border="0" cellpadding="0" cellspacing="2" width="100%">
-				<tbody><tr>
-					<td><img src="http://juneauempire.com/images/misc/c1dbl_arrow.gif" width="6" height="5" hspace="2" alt=""></td>
-					<td><font face="verdana, arial, sans-serif" size="1"><a href="http://www.juneauempire.com/celebration/2004/" target="_top"><b>Celebration 2004</b></a></font></td>
-				</tr>
-				<tr>
-					<td><img src="http://juneauempire.com/images/misc/c1dbl_arrow.gif" width="6" height="5" hspace="2" alt=""></td>
-					<td><font face="verdana, arial, sans-serif" size="1"><a href="http://www.southeastalaskahomes.com" target="_top"><b>SoutheastAlaskaHomes</b></a></font></td>
-				</tr>
-				<tr>
-					<td><img src="http://juneauempire.com/images/misc/c1dbl_arrow.gif" width="6" height="5" hspace="2" alt=""></td>
-					<td><font face="verdana, arial, sans-serif" size="1"><a href="http://juneauempire.com/votersguide/highschool/" target="_top"><b>H.S. Voters Guide</b></a></font></td>
-				</tr>
-				<tr>
-					<td><img src="http://juneauempire.com/images/misc/c1dbl_arrow.gif" width="6" height="5" hspace="2" alt=""></td>
-					<td><font face="verdana, arial, sans-serif" size="1"><a href="http://juneauempire.com/weddings" target="_top"><b>Juneau Brides</b></a></font></td>
-				</tr>
-				<tr>
-					<td><img src="http://juneauempire.com/images/misc/c1dbl_arrow.gif" width="6" height="5" hspace="2" alt=""></td>
-					<td><font face="verdana, arial, sans-serif" size="1"><a href="http://www.aklegislature.com/" target="_top"><b>Alaska Legislature</b></a></font></td>
-				</tr>
-				<tr>
-					<td><img src="http://juneauempire.com/images/misc/c1dbl_arrow.gif" width="6" height="5" hspace="2" alt=""></td>
-					<td><font face="verdana, arial, sans-serif" size="1"><a href="http://juneaualaska.com/" target="_top"><b>Juneau Guide</b></a></font></td>
-				</tr>
-				<tr>
-					<td><img src="http://juneauempire.com/images/misc/c1dbl_arrow.gif" width="6" height="5" hspace="2" alt=""></td>
-					<td><font face="verdana, arial, sans-serif" size="1"><a href="http://juneauempire.com/specialsections.shtml" target="_top"><b>Special Sections Archive</b></a></font></td>
-				</tr>
-
-		
-				</tbody></table>
-
-
-
-			</td>
-			<td></td>
-		</tr>
 
 		<!-- /SPECIAL SECTIONS MENU -->
 
@@ -323,6 +275,20 @@
 
 				<table border="0" cellpadding="0" cellspacing="2" width="100%">
 				<tbody><tr>
+					<td><img src="http://juneauempire.com/images/misc/c1dbl_arrow.gif" width="6" height="5" hspace="2" alt=""></td>
+					<td><font color="#993333" face="verdana, arial, sans-serif" size="1"><a href="http://juneauempire.com/thisweek" target="_top"><b>This Week</b></a></font></td>
+				</tr>
+				<tr>
+					<td><img src="http://juneauempire.com/images/misc/c1dbl_arrow.gif" width="6" height="5" hspace="2" alt=""></td>
+					<td><font color="#993333" face="verdana, arial, sans-serif" size="1"><a href="http://juneauempire.com/foodchallenge" target="_top"><b>Food Challenge!</b></a></font></td>
+				</tr>
+				
+				<tr>
+					<td><img src="http://juneauempire.com/images/misc/c1dbl_arrow.gif" width="6" height="5" hspace="2" alt=""><img src="http://juneauempire.com/images/spacer.gif" width="6" height="10" hspace="2" alt=""></td>
+					<td><font face="verdana, arial, sans-serif" size="1"><a href="http://juneauempire.com/local/info.shtml" target="_top"><b>Submit "Around Town" Event</b></a></font></td>
+				</tr>
+				
+				<tr>
 					<td><img src="http://juneauempire.com/images/misc/c1dbl_arrow.gif" width="6" height="5" hspace="2" alt=""></td>
 					<td><font face="verdana, arial, sans-serif" size="1"><a href="http://calendar.juneaualaska.com/forge?tid=33782&amp;display=MONTH" target="_top"><b>Calendar</b></a></font></td>
 				</tr>
