--- a/g/gr/gra/graphisoftus.com.html
+++ b/g/gr/gra/graphisoftus.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the graphisoftus.com privacy policy that was archived on 2004-04-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040404060057id_/http%3A//www.graphisoft.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the graphisoftus.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206205618id_/http%3A//www.graphisoft.com/frontpage/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Graphisoft - Privacy Policy</title>
@@ -10,29 +10,37 @@
 function PopupPic(sPicURL) {
 	window.open("/ftp/images/popup.html?"+sPicURL, "", "resizable=1,HEIGHT=400,WIDTH=400");
 }
+//function init();
 // -->
 </script>
 <link rel="StyleSheet" href="/css/main.css" type="text/css">
+<link rel="top" title="Home" href="/">
+<link rel="up" title="Up" href="../">
+<link rel="contents" title="Sitemap" href="/sitemap/">
+<link rel="author" title="Contact Us" href="/contact/">
+<link rel="copyright" title="Copyright" href="/frontpage/termsofuse.html">
+<link rel="alternate" title="Printable version" href="?printable=1" media="print">
+<link rel="alternate" title="Edit this page" href="https://admin.graphisoft.com/admin/pages/mod.html?branch=11&amp;category=1392&amp;pid=5411&amp;a=mod">
 </head>
-<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0" marginwidth="0" marginheight="0">
+<body onload="init();" bgcolor="#FFFFFF" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0" marginwidth="0" marginheight="0">
 <a name="top"></a>
 
 <table align="center" width="100%" cellspacing="0" cellpadding="0" border="0">
 <tbody><tr>
-<td width="50%" bgcolor="#003248">&nbsp;<br></td>
+<td width="50%" class="main_bgcolor">&nbsp;<br></td>
 <td>
 <!--ignore_perlfect_search-->
-<script language="JavaScript1.2" src="/js/SDDM_example.js?branch=11"></script>
-<script language="JavaScript1.2" src="/js/SDDM.js"></script><script language="JavaScript1.2" src="/js/SDDM_nn6.js"></script>
-<table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#003248">
+<script language="JavaScript1.2" src="/js/SDDM_example.js?branch=11" type="text/javascript"></script>
+<script language="JavaScript1.2" src="/js/SDDM.js" type="text/javascript"></script><script language="JavaScript1.2" src="/js/SDDM_nn6.js"></script>
+<table width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
 <tbody><tr>
-    <td width="205" valign="top">
+    <td width="205" valign="top" class="main_bgcolor">
 		<map name="Home" id="Home">
 			<area alt="Home" coords="45,70,189,98" href="/">
 		</map>
 		<img src="/static_images/11/logo.gif" alt="" width="205" height="100" border="0" usemap="#Home"><br>
 	</td>
-    <td width="575" align="center" valign="top" nowrap="">
+    <td width="575" align="center" valign="top" nowrap="" class="main_bgcolor">
 		<a href="/products/" onmouseout="SDDM_deactivate(1);" onmouseover="SDDM_activate(1);"><img name="SDDM_image1" id="SDDM_image1" src="/static_images/11/products.gif" width="125" height="65" alt="PRODUCTS AND SERVICES" border="0"></a><img src="/spacer.gif" alt="" width="25" height="75" border="0"><a href="/support/" onmouseout="SDDM_deactivate(2);" onmouseover="SDDM_activate(2);"><img name="SDDM_image2" id="SDDM_image2" src="/static_images/11/support.gif" width="125" height="65" alt="SUPPORT" border="0"></a><img src="/spacer.gif" alt="" width="25" height="75" border="0"><a href="/company/" onmouseout="SDDM_deactivate(3);" onmouseover="SDDM_activate(3);"><img name="SDDM_image3" id="SDDM_image3" src="/static_images/11/company.gif" width="125" height="65" alt="COMPANY" border="0"></a><img src="/spacer.gif" alt="" width="25" height="75" border="0"><a href="/community/" onmouseout="SDDM_deactivate(4);" onmouseover="SDDM_activate(4);"><img name="SDDM_image4" id="SDDM_image4" src="/static_images/11/community.gif" width="125" height="65" alt="COMMUNITY" border="0"></a>
 	</td>
 </tr>
@@ -41,7 +49,7 @@ function PopupPic(sPicURL) {
 
 
 <!--ignore_perlfect_search-->
-<table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#003248">
+<table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="main_bgcolor">
 <tbody><tr>
     <td width="205" valign="top" rowspan="2">
 		<img src="/static_images/11/logo_bottom.gif" alt="" width="205" height="45" border="0">
@@ -50,7 +58,7 @@ function PopupPic(sPicURL) {
 		<img src="/spacer.gif" alt="" width="15" height="1" border="0">
 	</td>
 	<td rowspan="2" align="left" valign="top" nowrap="">
-		<a href="" class="Level1_title"></a>&nbsp;<br>
+		<a class="Level1_title"></a>&nbsp;<br>
 	</td>
 	<td width="100%" align="left" valign="bottom" nowrap="">
 		<a href="" class="Level2_title"></a><br>
@@ -65,7 +73,7 @@ function PopupPic(sPicURL) {
 <!--/ignore_perlfect_search-->
 
 </td>
-<td width="50%" bgcolor="#003248">&nbsp;<br></td>
+<td width="50%" class="main_bgcolor">&nbsp;<br></td>
 </tr>
 
 <tr>
@@ -75,21 +83,33 @@ function PopupPic(sPicURL) {
 <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
 <tbody><tr>
 	<td width="205" background="/static_images/11/left_back.gif"><br></td>
-    <td width="575" align="right" valign="top">
+    <td width="563" align="right" valign="top">
+
+<a href="/sendpage.html?uri=/frontpage/privacy.html" class="Naviline">Send To A Friend</a>
+|
 
 
-<a href="/contact/" class="Naviline"></a>
+
+<a href="/contact/" class="Naviline">Contact Us</a>
 |
-<a href="/sitemap/" class="Naviline"></a>
+<a href="/sitemap/" class="Naviline">Site Map</a>
 |
-<a href="?printable=1" target="print" class="Naviline" onclick="window.open('?printable=1','print','resizable,scrollbars,menubar,HEIGHT=450,WIDTH=600,SCREENX=150,SCREENY=50');return false"></a>
+<a href="?printable=1" target="print" class="Naviline" onclick="window.open('?printable=1','print','resizable,scrollbars,menubar,HEIGHT=450,WIDTH=600,SCREENX=150,SCREENY=50');return false">Printable version</a>
 |
-<a href="/" class="Naviline"><b></b></a><br>
-		<img src="/spacer.gif" alt="" width="575" height="1" border="0"><br>
+<a href="/" class="Naviline"><b>HOME</b></a><br>
+		<img src="/spacer.gif" alt="" width="563" height="1" border="0"><br>
 	</td>
 </tr>
 </tbody></table>
 <!--/ignore_perlfect_search-->
+
+
+<script language="JavaScript" type="text/javascript">
+<!--
+function init() {
+}
+// -->
+</script>
 
 </td>
 <td width="50%">&nbsp;<br></td>
@@ -195,16 +215,17 @@ Privacy Policy
 
 
 
+
 <img src="/spacer.gif" alt="" width="445" height="10" border="0"><br>
 </td>
 <td width="15" align="left" valign="top"><img src="/spacer.gif" alt="" width="15" height="1" border="0"><br></td>
 <td width="100" align="left" valign="top">
 <p><br>
 </p><div class="search">
-<form action="/psearch/11/" method="get" enctype="text/plain" onsubmit="return (this.form.elements['q'].value != '');">
 <table border="0" cellspacing="0" cellpadding="4">
 <tbody><tr>
-<td bgcolor="#003248">
+<form action="/psearch/11/" method="get" enctype="text/plain" onsubmit="return (this.form.elements['q'].value != '');"></form>
+<td class="main_bgcolor">
 	<input class="search" type="text" name="q" value="" style="width: 90px" onfocus="if (this.value=='') this.value='';"><br>
 	<input type="image" src="/static_images/11/text_search.gif" align="right" width="50" height="12" hspace="0" vspace="0" border="0" class="Image">
 <br><select name="include" class="search_filter">
@@ -216,12 +237,12 @@ Privacy Policy
 </select>
 
 	<input type="hidden" name="p" value="1">
-	<input type="hidden" name="lang" value="">
+	<input type="hidden" name="lang" value="en">
 	<input type="hidden" name="mode" value="all">
 </td>
+
 </tr>
 </tbody></table>
-</form>
 </div>
 <br>
 
@@ -234,22 +255,22 @@ Privacy Policy
 </td>
 <td width="50%">&nbsp;<br></td>
 </tr>
-<tr><td colspan="3" bgcolor="#003248"><img src="/spacer.gif" alt="" width="1" height="1" border="0"><br></td></tr>
+<tr><td colspan="3" class="main_bgcolor"><img src="/spacer.gif" alt="" width="1" height="1" border="0"><br></td></tr>
 <tr>
 <td width="50%">&nbsp;<br></td>
 <td>
 <!--ignore_perlfect_search-->
-<table width="780" border="0" cellspacing="0" cellpadding="0" align="center">
+<table width="768" border="0" cellspacing="0" cellpadding="0" align="center">
 <tbody><tr>
     <td width="205"><a href="#top"><img src="/static_images/11/top.gif" alt="" width="31" height="14" border="0" align="left"></a></td>
-    <td width="575" align="right" nowrap="">
+    <td width="563" align="right" nowrap="">
 		<span class="Credits">
 		Copyright © 2004 - Graphisoft R&amp;D Software Development Rt. All rights reserved worldwide. <a href="/frontpage/termsofuse.html" class="naviline">Terms of Use</a> | <a href="/frontpage/privacy.html" class="naviline">Privacy Policy</a><br>
 		</span>
 	</td>
 </tr>
 </tbody></table>
-<script language="javascript" src="/js/awstats_misc_tracker.js"></script><img src="/js/awstats_misc_tracker.js?screen=800x600&amp;cdi=24&amp;java=false&amp;shk=n&amp;fla=n&amp;rp=n&amp;mov=n&amp;wma=n&amp;pdf=n&amp;uid=awsuser_id1580477404378r3478&amp;sid=awssession_id1580477404378r3478" height="0" width="0" border="0">
+<script language="javascript" src="/js/awstats_misc_tracker.js"></script><img src="/js/awstats_misc_tracker.js?screen=800x600&amp;cdi=24&amp;java=false&amp;shk=n&amp;fla=n&amp;rp=n&amp;mov=n&amp;wma=n&amp;pdf=n&amp;uid=awsuser_id1580477403908r222&amp;sid=awssession_id1580477403908r222" height="0" width="0" border="0">
 <!--/ignore_perlfect_search-->
 
 </td>
